objects/Website_use__c.object
<CustomObject>
    <description>Tracks use of website</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of website use</description>
        <inlineHelpText>Description of website use</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recover login</fullName>
                </value>
                <value>
                    <fullName>Submit a case</fullName>
                </value>
                <value>
                    <fullName>Login YP</fullName>
                </value>
                <value>
                    <fullName>Login PG</fullName>
                </value>
                <value>
                    <fullName>Register YP</fullName>
                </value>
                <value>
                    <fullName>Register PG</fullName>
                </value>
                <value>
                    <fullName>Choose dates school</fullName>
                </value>
                <value>
                    <fullName>Choose dates home</fullName>
                </value>
                <value>
                    <fullName>Choose dates wave allocation</fullName>
                </value>
                <value>
                    <fullName>Payment options</fullName>
                </value>
                <value>
                    <fullName>Payment bursary</fullName>
                </value>
                <value>
                    <fullName>Payment online</fullName>
                </value>
                <value>
                    <fullName>Payment cheque</fullName>
                </value>
                <value>
                    <fullName>Payment cash</fullName>
                </value>
                <value>
                    <fullName>Payment over phone</fullName>
                </value>
                <value>
                    <fullName>Final details</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Login_date_time__c</fullName>
        <description>Captures date and time of website login</description>
        <inlineHelpText>Captures date and time of website login</inlineHelpText>
        <label>Login date time</label>
        <type>DateTime</type>
    </fields>
    <label>Website Use</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WU{YY}{MM}{DD}{000000}</displayFormat>
        <label>Website Use Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website Uses</pluralLabel>
    <recordTypes>
        <fullName>Booking</fullName>
        <active>true</active>
        <description>Booking system website</description>
        <label>Booking</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCS</fullName>
        <active>true</active>
        <description>The Challenge Society website</description>
        <label>TCS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>